JEP389/419/424 Foreign Linker API: UpCall (primitive & struct support)
The change aims to support the upcall handler to the requested
java method via the native thunk generated by JIT.

Signed-off-by: Cheng Jin <jincheng@ca.ibm.com>